--- a/SequencerImages.uplugin
+++ b/SequencerImages.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0",
 	"FriendlyName": "SequencerImages",
 	"Description": "Plugin for Sequencer that provides an image track. Useful for storyboards, placeholder images, or title cards.",
-	"Category": "Other",
+	"Category": "Virtual Production",
 	"CreatedBy": "Dave Ryley",
 	"CreatedByURL": "",
 	"DocsURL": "",
